# serializer version: 1
# name: test_ctl_set_hvac_mode[default]
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Auto',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'HeatingOff',
      }),
    ),
  ])
# ---
# name: test_ctl_set_hvac_mode[h032585]
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Heat',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Off',
      }),
    ),
  ])
# ---
# name: test_ctl_set_hvac_mode[h099625]
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Auto',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'HeatingOff',
      }),
    ),
  ])
# ---
# name: test_ctl_set_hvac_mode[minimal]
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Auto',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'HeatingOff',
      }),
    ),
  ])
# ---
# name: test_ctl_set_hvac_mode[sys_004]
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Auto',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'HeatingOff',
      }),
    ),
  ])
# ---
# name: test_ctl_set_preset_mode[default]
  list([
    'Reset',
    'eco',
    'away',
    'home',
    'Custom',
  ])
# ---
# name: test_ctl_set_preset_mode[default].1
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithReset',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithEco',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Away',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'DayOff',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Custom',
      }),
    ),
  ])
# ---
# name: test_ctl_set_preset_mode[h032585]
  list([
  ])
# ---
# name: test_ctl_set_preset_mode[h032585].1
  list([
  ])
# ---
# name: test_ctl_set_preset_mode[h099625]
  list([
    'eco',
    'away',
  ])
# ---
# name: test_ctl_set_preset_mode[h099625].1
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithEco',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Away',
      }),
    ),
  ])
# ---
# name: test_ctl_set_preset_mode[minimal]
  list([
    'Reset',
    'eco',
    'away',
    'home',
    'Custom',
  ])
# ---
# name: test_ctl_set_preset_mode[minimal].1
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithReset',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithEco',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Away',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'DayOff',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Custom',
      }),
    ),
  ])
# ---
# name: test_ctl_set_preset_mode[sys_004]
  list([
    'eco',
    'away',
  ])
# ---
# name: test_ctl_set_preset_mode[sys_004].1
  list([
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'AutoWithEco',
      }),
    ),
    tuple(
      dict({
        'permanent': True,
        'systemMode': 'Away',
      }),
    ),
  ])
# ---
# name: test_zon_set_hvac_mode[default]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 5.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
# name: test_zon_set_hvac_mode[h032585]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 4.5,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
# name: test_zon_set_hvac_mode[h099625]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 5.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
# name: test_zon_set_hvac_mode[minimal]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 5.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
# name: test_zon_set_hvac_mode[sys_004]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 5.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
# name: test_zon_set_preset_mode[default]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 17.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
    tuple(
      dict({
        'HeatSetpointValue': 17.0,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_preset_mode[h032585]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 21.5,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
    tuple(
      dict({
        'HeatSetpointValue': 21.5,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_preset_mode[h099625]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 21.5,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
    tuple(
      dict({
        'HeatSetpointValue': 21.5,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T19:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_preset_mode[minimal]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 17.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
    tuple(
      dict({
        'HeatSetpointValue': 17.0,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_preset_mode[sys_004]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 15.0,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
    tuple(
      dict({
        'HeatSetpointValue': 15.0,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T20:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_temperature[default]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 19.1,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_temperature[h032585]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 19.1,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_temperature[h099625]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 19.1,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T19:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_temperature[minimal]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 19.1,
        'setpointMode': <ZoneMode.TEMPORARY_OVERRIDE: 'TemporaryOverride'>,
        'timeUntil': '2024-07-10T21:10:00Z',
      }),
    ),
  ])
# ---
# name: test_zon_set_temperature[sys_004]
  list([
    tuple(
      dict({
        'HeatSetpointValue': 19.1,
        'setpointMode': <ZoneMode.PERMANENT_OVERRIDE: 'PermanentOverride'>,
      }),
    ),
  ])
# ---
